--- a/english/index-en.html
+++ b/english/index-en.html
@@ -92,10 +92,10 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
+                    <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
