--- a/contacts.html
+++ b/contacts.html
@@ -15,10 +15,10 @@
          <a href="who-we-are.html"><nav class="text animation">Chi siamo</nav></a>
          <a href="team.html"><nav class="text animation">Il team</nav></a>
          <a href="contacts.html"><nav class="text animation">Contatti</nav></a>
-         <div><a href="/english/contacts-en.html">
+         <div><a href="english/index-en.html">
             <nav class="language text">IT</nav>
             <nav class="language flag">flag</nav>
-         </a></div>
+        </a></div>
     </header>
     <section class="main">
         <div class="big-image">
