--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="images/bigg-transparent-logo.png"/>
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
             <div class="absolute name-position"><strong>Alboino Racing</strong></div>
         </div>
         <div class="team">
-            Team: Petito Leonardo, Matteo De Paoli, Carlo Pilotti,
+            Team: Petitto Leonardo, Matteo De Paoli, Carlo Pilotti,
             Valentino De Bacco, Pietro Longo, Andrea Dall'Est, Filippo Turra, Francesco Iacobellis.
         </div>
     </section>
@@ -92,10 +92,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/" target="_blank"><img src="images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/" target="_blank"><img src="images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="/images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
