--- a/who-we-are.html
+++ b/who-we-are.html
@@ -10,11 +10,11 @@
         <a href="index.html"><nav class="icon">
             icon
          </nav></a>
-         <a href="index.html"><nav class="text animation">Home</nav></a>
-         <a href="what-we-do.html"><nav class="text animation">Cosa facciamo</nav></a>
-         <a href="who-we-are.html"><nav class="text animation">Chi siamo</nav></a>
-         <a href="team.html"><nav class="text animation">Il team</nav></a>
-         <a href="contacts.html"><nav class="text animation">Contatti</nav></a>
+         <a href="/index.html"><nav class="text animation">Home</nav></a>
+         <a href="/what-we-do.html"><nav class="text animation">Cosa facciamo</nav></a>
+         <a href="/who-we-are.html"><nav class="text animation">Chi siamo</nav></a>
+         <a href="/team.html"><nav class="text animation">Il team</nav></a>
+         <a href="/contacts.html"><nav class="text animation">Contatti</nav></a>
          <div><a href="/english/who-we-are-en.html">
             <nav class="language text">IT</nav>
             <nav class="language flag">flag</nav>
@@ -31,7 +31,7 @@
     <div class="space">space</div>
     <section class="contacts">
         <ul class="where">
-            <li><img src="images/school-image" alt="school image" class="round-image"></li>
+            <li><img src="/images/school-image" alt="school image" class="round-image"></li>
             <li class="title">
                 <div>Da dove arriviamo?</div>
                 <p class="paragraph">
@@ -62,7 +62,7 @@
             </div>
         </div>
         <ul class="what">
-            <li><img src="images/f1is-image.jpg" alt="f1 in schools image" class="round-image"></li>
+            <li><img src="/images/f1is-image.jpg" alt="f1 in schools image" class="round-image"></li>
             <li class="title">
                 <div>Cos'è la Formula 1 in schools?</div>
                 <p class="paragraph">
@@ -105,10 +105,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/"><img src="images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="/images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
