--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
             <li class="logo-gmail social"><a><div><img src="images/icon-gmail.png" alt="icon instagram"></div> <div class="text">alboinoracing@gmail.com</div></a></li>
             <li class="logo-instagram social"><a href="https://www.instagram.com/alboinoracing?igsh=djdpbTNqeTdpNzdz&utm_source=qr" target="_blank"><img src="images/icon-instagram.png" alt="icon instagram"></a></li>
             <li class="logo-tiktok social"><a href="https://www.tiktok.com/@alboinoracing?_t=ZN-8tqiiRk0gC6&_r=1" target="_blank"><img src="images/icon-tiktok.png" alt="icon instagram"></a></li>
-            <li class="logo-facebook social"><a href="aerbbdf" target="_blank"><img src="images/icon-facebook.png" alt="icon instagram"></a></li>
         </ul>
     </section>
     <div class="space2">space</div>
@@ -95,7 +94,7 @@
                     <li><a href="https://www.istitutocanossianofeltre.org/"><img src="images/logo-canossiane.png" alt="canossiane logo"></a></li>
                     <li><a href="https://www.gomme.it/"><img src="images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
                     <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="images/bim_piave.png" alt="bim"></a></li>
-                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="images/logo-carlo-1.png" alt="heritage finds"></a></li>
                     <li><img src="images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
