--- a/team/petitto.html
+++ b/team/petitto.html
@@ -3,7 +3,7 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="team-styles.css">
-    <link rel="icon" type="image/png" href="/images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
          <a href="../who-we-are.html"><nav class="text animation">Chi siamo</nav></a>
          <a href="../team.html"><nav class="text animation">Il team</nav></a>
          <a href="../contacts.html"><nav class="text animation">Contatti</nav></a>
-         <div><a href="/english/team/petitto-en.html">
+         <div><a href="../english/team/petitto-en.html">
             <nav class="language text">IT</nav>
             <nav class="language flag">flag</nav>
          </a></div>
@@ -53,10 +53,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/" target="_blank"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/" target="_blank"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/" target="_blank"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/" target="_blank"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
