--- a/english/what-we-do-en.html
+++ b/english/what-we-do-en.html
@@ -3,7 +3,7 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="what-we-do-styles-en.css">
-    <link rel="icon" type="image/png" href="/images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png">
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
         </div>
         <div class="road-map-section">
             <div class="arrow"></div>
-            <div class="road-map-image"><img src="/images/road-map.png" alt="road map"></div>
+            <div class="road-map-image"><img src="../images/road-map.png" alt="road map"></div>
         </div>
     </section>
     <section class="step1 s1">
@@ -53,7 +53,7 @@
             the judges would then take away points away from us during the
             competition.
         </p>
-        <img src="/images/guide-image.png" alt="guide image" class="left-image">
+        <img src="../images/guide-image.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s2">
         <strong class="title"> Step 2: What is a Webinar?</strong>
@@ -66,7 +66,7 @@
             Others gave advice on economic issues, such as
             the most effective strategies for finding sponsors.
         </p>
-        <img src="/images/webinar-image.png" alt="guide image" class="left-image">
+        <img src="../images/webinar-image.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s3">
         <strong class="title"> Step 3: Our logo</strong>
@@ -81,7 +81,7 @@
             that we used to search for images of the tower,
             the wings and finally the flags.
         </p>
-        <img src="/images/logo-with-bg.png" alt="guide image" class="left-image">
+        <img src="../images/logo-with-bg.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s4">
         <strong class="title"> Step 4: Finding sponsors</strong>
@@ -92,7 +92,7 @@
             to not having expenses that would weigh either the school or us students. Fortunately, the search
             was long but not difficult.
         </p>
-        <img src="/images/all-sponsors.png" alt="guide image" class="left-image">
+        <img src="../images/all-sponsors.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s5">
         <strong class="title"> Step 5: The qualification regulations</strong>
@@ -102,7 +102,7 @@
             such as the mandatory requirements for participants, the timetable, 
             how many points will be awarded for each phase of the project development...
         </p>
-        <img src="/images/relgolamento-qualifiche-screenshot.png" alt="guide image" class="left-image">
+        <img src="../images/relgolamento-qualifiche-screenshot.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s6">
         <strong class="title"> Step 6: The portfolio</strong>
@@ -114,7 +114,7 @@
             this race, every step and action carried out to achieve the
             goal of building the F1 car.
         </p>
-        <img src="/images/webinar-image.png" alt="guide image" class="left-image">
+        <img src="../images/webinar-image.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s7">
         <strong class="title"> Step 7: The programs used</strong>
@@ -130,7 +130,7 @@
             though it is really easy to use, learning it wasn't at all
             due to the lack of online guides.
         </p>
-        <img src="/images/autodesk-image.png" alt="guide image" class="left-image">
+        <img src="../images/autodesk-image.png" alt="guide image" class="left-image">
     </section>
     <section class="step1 s8">
         <strong class="title"> Step 8: The final touches and the race</strong>
@@ -141,7 +141,7 @@
             get to the race, where we will have the morning to prepare,
             and then the afternoon for the actual race and the exhibition.
         </p>
-        <img src="/images/3D-image.jpg" alt="guide image" class="left-image">
+        <img src="../images/3D-image.jpg" alt="guide image" class="left-image">
     </section>
     <div class="space2">space</div>
     <section class="sponsors-section">
@@ -151,10 +151,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
