--- a/english/who-we-are-en.html
+++ b/english/who-we-are-en.html
@@ -3,7 +3,7 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="who-we-are-styles-en.css">
-    <link rel="icon" type="image/png" href="/images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
     <div class="space">space</div>
     <section class="contacts">
         <ul class="where">
-            <li><img src="/images/school-image" alt="school image" class="round-image"></li>
+            <li><img src="../images/school-image" alt="school image" class="round-image"></li>
             <li class="title">
                 <div>Where do we come from?</div>
                 <p class="paragraph">
@@ -61,7 +61,7 @@
             </div>
         </div>
         <ul class="what">
-            <li><img src="/images/f1is-image.jpg" alt="f1 in schools image" class="round-image"></li>
+            <li><img src="../images/f1is-image.jpg" alt="f1 in schools image" class="round-image"></li>
             <li class="title">
                 <div>What is Formula 1 in schools?</div>
                 <p class="paragraph">
@@ -105,10 +105,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
-                    <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
