--- a/english/team/andrea-en.html
+++ b/english/team/andrea-en.html
@@ -3,19 +3,19 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="team-styles-en.css">
-    <link rel="icon" type="image/png" href="/images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="../../images/bigg-transparent-logo.png">
 </head>
 <body>
     <header>
-        <a href="/index.html"><nav class="icon">
+        <a href="../../index.html"><nav class="icon">
             icon
          </nav></a>
-         <a href="/english/index-en.html"><nav class="text animation">Home</nav></a>
-        <a href="/english/what-we-do-en.html"><nav class="text animation">What we do</nav></a>
-        <a href="/english/who-we-are-en.html"><nav class="text animation">Who we are</nav></a>
-        <a href="/english/team-en.html"><nav class="text animation">The team</nav></a>
-        <a href="/english/contacts-en.html"><nav class="text animation">Contacts</nav></a>
-         <div><a href="/team/andrea.html">
+         <a href="../../english/index-en.html"><nav class="text animation">Home</nav></a>
+        <a href="../../english/what-we-do-en.html"><nav class="text animation">What we do</nav></a>
+        <a href="../../english/who-we-are-en.html"><nav class="text animation">Who we are</nav></a>
+        <a href="../../english/team-en.html"><nav class="text animation">The team</nav></a>
+        <a href="../../english/contacts-en.html"><nav class="text animation">Contacts</nav></a>
+         <div><a href="../../team/andrea.html">
             <nav class="language text">EN</nav>
             <nav class="language flag">flag</nav>
          </a></div>
@@ -31,7 +31,7 @@
     <div class="space">space</div>
     <section class="main">
         <ul class="names">
-            <li class="image"><img src="/images/andrea.png" alt=""></li>
+            <li class="image"><img src="../../images/andrea.png" alt=""></li>
             <li class="description">
                 <div class="title">Andrea Dall'Est</div>
                 <div class="paragraph">
@@ -47,18 +47,18 @@
     <div class="space2">space</div>
     <section class="sponsors-section">
         <div class="bg">
-            background image
-        </div>
-        <div class="sponsor-text">
-            Sponsors:
-        </div>
-        <div class="sponsors-logos">
-            <ul>
-                <li><a href="https://www.istitutocanossianofeltre.org/"><img src="/images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                <li><a href="https://www.gomme.it/"><img src="/images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="/images/bim_piave.png" alt="bim"></a></li>
-                <li><img src="/images/logo-lusa-trasparente.png" alt="lusa rino"></li>
-            </ul>
+            <div class="sponsor-text">
+                Sponsor:
+            </div>
+            <div class="sponsors-logos">
+                <ul>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../../images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="../../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="../../images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../../images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="../../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                </ul>
+            </div>
         </div>
     </section>
 </body>
