--- a/team-en.html
+++ b/team-en.html
@@ -2,21 +2,21 @@
 <html>
 <head>
     <title>Alboino Racing</title>
-    <link rel="stylesheet" href="team-styles.css">
-    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png"/>
+    <link rel="stylesheet" href="team-styles-en.css">
+    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png">
 </head>
 <body>
     <header>
-        <a href="index.html"><nav class="icon">
+        <a href="index-en.html"><nav class="icon">
             icon
          </nav></a>
-         <a href="index.html"><nav class="text animation">Home</nav></a>
-         <a href="what-we-do.html"><nav class="text animation">Cosa facciamo</nav></a>
-         <a href="who-we-are.html"><nav class="text animation">Chi siamo</nav></a>
-         <a href="team.html"><nav class="text animation">Il team</nav></a>
-         <a href="contacts.html"><nav class="text animation">Contatti</nav></a>
-         <div><a href="english/team-en.html">
-            <nav class="language text">IT</nav>
+         <a href="index-en.html"><nav class="text animation">Home</nav></a>
+         <a href="what-we-do-en.html"><nav class="text animation">What we do</nav></a>
+         <a href="who-we-are-en.html"><nav class="text animation">Who we are</nav></a>
+         <a href="team-en.html"><nav class="text animation">The team</nav></a>
+         <a href="contacts-en.html"><nav class="text animation">Contacts</nav></a>
+         <div><a href="../team.html">
+            <nav class="language text">EN</nav>
             <nav class="language flag">flag</nav>
          </a></div>
     </header>
@@ -31,29 +31,29 @@
     <div class="space">space</div>
     <section class="main">
         <div class="title">
-            Il nostro Team
+            Our Team
         </div>
         <ul class="names">
-            <a href="team/matteo.html"><li class="matteo">Matteo</li></a>
-            <a href="team/andrea.html"><li class="andrea">Andrea</li></a>
-            <a href="team/petitto.html"><li class="petito">Leonardo</li></a>
-            <a href="team/valentino.html"><li class="valentino">Valentino</li></a>
-            <a href="team/filippo.html"><li class="filippo">Filippo</li></a>
-            <a href="team/pietro.html"><li class="pietro">Pietro</li></a>
-            <a href="team/carlo.html"><li class="carlo">Carlo</li></a>
+            <a href="team/matteo-en.html"><li class="matteo">Matteo</li></a>
+            <a href="team/andrea-en.html"><li class="andrea">Andrea</li></a>
+            <a href="team/petitto-en.html"><li class="petito">Leonardo</li></a>
+            <a href="team/valentino-en.html"><li class="valentino">Valentino</li></a>
+            <a href="team/filippo-en.html"><li class="filippo">Filippo</li></a>
+            <a href="team/pietro-en.html"><li class="pietro">Pietro</li></a>
+            <a href="team/carlo-en.html"><li class="carlo">Carlo</li></a>
         </ul>
     </section>
     <div class="space2">space</div>
     <section class="sponsors-section">
         <div class="bg">
             <div class="sponsor-text">
-                Sponsor:
+                Sponsors:
             </div>
             <div class="sponsors-logos">
                 <ul>
                     <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
                     <li><a href="https://www.gomme.it/"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
                     <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
                     <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
