--- a/team/pietro.html
+++ b/team/pietro.html
@@ -35,7 +35,11 @@
             <li class="description">
                 <div class="title">Pietro Longo</div>
                 <div class="paragraph">
-                    Pilota
+                    Pietro Longo è stato il nostro pilota durante la
+                    gara, ha lavorato sulla produzione delle magliette
+                    e ci ha forniti di un potente computer che abbimo 
+                    usato per far funzionare i programmi
+                    per lo sviluppo della macchina.
                 </div>
             </li>
         </ul>
@@ -51,7 +55,7 @@
                 <ul>
                     <li><a href="https://www.istitutocanossianofeltre.org/" target="_blank"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
                     <li><a href="https://www.gomme.it/" target="_blank"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
-                    <li><a href="https://www.consorziobimpiave.bl.it/home" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
+                    <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="../images/bim_piave.png" alt="bim"></a></li>
                     <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
                     <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
