--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <title>Alboino Racing</title>
     <link rel="stylesheet" href="team-styles.css">
-    <link rel="icon" type="image/png" href="../images/bigg-transparent-logo.png"/>
+    <link rel="icon" type="image/png" href="images/bigg-transparent-logo.png"/>
 </head>
 <body>
     <header>
