--- a/team.html
+++ b/team.html
@@ -51,11 +51,11 @@
             </div>
             <div class="sponsors-logos">
                 <ul>
-                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="../images/logo-canossiane.png" alt="canossiane logo"></a></li>
-                    <li><a href="https://www.gomme.it/"><img src="../images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
+                    <li><a href="https://www.istitutocanossianofeltre.org/"><img src="images/logo-canossiane.png" alt="canossiane logo"></a></li>
+                    <li><a href="https://www.gomme.it/"><img src="images/logo-tonin-gomme.png" alt="tonin gomme logo"></a></li>
                     <li><a href="https://giovanimprenditori.org/" target="_blank"><img src="images/bim_piave.png" alt="bim"></a></li>
-                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="../images/logo-carlo-1.png " alt="bim"></a></li>
-                    <li><img src="../images/logo-lusa-trasparente.png" alt="lusa rino"></li>
+                    <li><a href="https://www.ebay.it/sch/i.html?item=356822341524&rt=nc&_trksid=p4429486.m3561.l161211&_ssn=heritagefinds23" target="_blank"><img src="images/logo-carlo-1.png " alt="bim"></a></li>
+                    <li><img src="images/logo-lusa-trasparente.png" alt="lusa rino"></li>
                 </ul>
             </div>
         </div>
