--- a/english/contacts-en.html
+++ b/english/contacts-en.html
@@ -44,7 +44,7 @@
         </p>
         <p>
             Or, if you know any of our members personally, our team i made of:
-            <ul>
+            <ul class="list">
                 <li>Matteo De Paoli</li>
                 <li>Petito Leonardo</li>
                 <li>Carlo Pilotti</li>
